--- a/index.html
+++ b/index.html
@@ -55,16 +55,55 @@
                 <h3><span>Estudante</span></h3>
                 <p>Em 2024 comecei o curso de técnico em informática na Etec Maria Cristina Medeiros.</p>
                 <ul>
-                    <li><i class="fas fa-birthday-cake"></i> Aniversário: 28 de março de 2009</li>
-                    <li><i class="fab fa-github"></i> Meu Github: matheusbatista103</li>
-                    <li><i class="fas fa-phone"></i> Telefone: +5511975640708</li>
-                    <li><i class="fas fa-map-marker-alt"></i> Cidade: Ribeirão Pires-SP</li>
-                    <li><i class="fas fa-user"></i> Idade: 15</li>
-                    <li><i class="fas fa-graduation-cap"></i> Aprendizado: Início</li>
-                    <li><i class="fas fa-envelope"></i> Email: matheusdepaulicontato@gmail.com</li>
+                    <li><i class="fas fa-birthday-cake"></i> <span>Aniversário:</span> 28 de março de 2009</li>
+                    <li><i class="fab fa-github"></i> <span>Meu Github:</span> matheusbatista103</li>
+                    <li><i class="fas fa-phone"></i> <span>Telefone:</span> +5511975640708</li>
+                    <li><i class="fas fa-map-marker-alt"></i> <span>Cidade:</span> Ribeirão Pires-SP</li>
+                    <li><i class="fas fa-user"></i> <span>Idade:</span> 15</li>
+                    <li><i class="fas fa-graduation-cap"></i> <span>Aprendizado:</span> Início</li>
+                    <li><i class="fas fa-envelope"></i> <span>Email:</span> matheusdepaulicontato@gmail.com</li>
                 </ul>
                 <p>Eu sou Matheus de Pauli Batista, sou uma pessoa extrovertida e gosto de trabalhar em equipe. Estou sempre buscando aprender mais sobre desenvolvimento web e programação.</p>
-            </div>
+                
+            <nav class="dados">
+                <div class="card">
+                    <div class="icon">
+                        <i class="fas fa-graduation-cap"></i>
+                    </div>
+                    <div class="info">
+                        <h3>7</h3>
+                        <p>Meses de experiência</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="icon">
+                        <i class="fas fa-project-diagram"></i>
+                    </div>
+                    <div class="info">
+                        <h3>0</h3>
+                        <p>Cursos ou Treinamentos concluidos:</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="icon">
+                        <i class="fas fa-award"></i>
+                    </div>
+                    <div class="info">
+                        <h3>0</h3>
+                        <p>Certificações</p>
+                    </div>
+                </div>
+                <div id="commit-card" class="card">
+                    <div class="icon">
+                        <i class="fas fa-code-branch"></i>
+                    </div>
+                    <div class="info">
+                        <h3 id="commit-count">Carregando...</h3>
+                        <p>Total de Commits</p>
+                    </div>
+                </div>
+            </nav>    
+            </div>        
         </div>
     </section>    
 
