--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
                 </ul>
 
                 <div class="social-links">
-                    <a href="https://www.instagram.com/matheus.depauli/"><img src="assets/img/instagram.png"></a>
-                    <a href="https://www.github.com/matheusbatista103"><img src="assets/img/github.png"></a>
-                    <a href="https://www.linkedin.com/in/matheus-pauli-88b328318/"><img src="assets/img/linkedin.png"></a>
+                    <a href="https://www.instagram.com/matheus.depauli#"><img src="assets/img/instagram.png"></a>
+                    <a href="https://www.github.com/matheusbatista103#"><img src="assets/img/github.png"></a>
+                    <a href="https://www.linkedin.com/in/matheus-pauli-88b328318#"><img src="assets/img/linkedin.png"></a>
                 </div>
             </div>
         </div>
@@ -41,7 +41,7 @@
     <section id="about" class="section">
         <div id="nav-bar2" class="nav-bar2">
             <ul>
-                <li><a href="#home" class="nav-link2">Inicio</a></li>
+                <li><a href="#home" class="nav-link2">Inicio</a></li>-
                 <li><a href="#about" class="nav-link2">Sobre</a></li>
                 <li><a href="#portfolio" class="nav-link2">Portfolio</a></li>
                 <li><a href="#courses" class="nav-link2">Cursos</a></li>
@@ -52,8 +52,8 @@
         <div class="info">
             <img src="assets/img/me.jpg" alt="Foto de Matheus">
             <div class="detalhes">
-                <h3><span>Estudante</span></h3>
-                <p>Em 2024 comecei o curso de técnico em informática na Etec Maria Cristina Medeiros.</p>
+                <h3 class="titles"><span>Estudante</span></h3>
+                <p>No inicio de 2024 comecei o curso de técnico em informática na Etec Maria Cristina Medeiros. Pretendo me formar no ensino médio em 2026</p>
                 <ul>
                     <li><i class="fas fa-birthday-cake"></i> <span>Aniversário:</span> 28 de março de 2009</li>
                     <li><i class="fab fa-github"></i> <span>Meu Github:</span> matheusbatista103</li>
@@ -70,7 +70,7 @@
                     <div class="icon">
                         <i class="fas fa-graduation-cap"></i>
                     </div>
-                    <div class="info">
+                    <div>
                         <h3>7</h3>
                         <p>Meses de experiência</p>
                     </div>
@@ -79,7 +79,7 @@
                     <div class="icon">
                         <i class="fas fa-project-diagram"></i>
                     </div>
-                    <div class="info">
+                    <div>
                         <h3>0</h3>
                         <p>Cursos ou Treinamentos concluidos:</p>
                     </div>
@@ -88,7 +88,7 @@
                     <div class="icon">
                         <i class="fas fa-award"></i>
                     </div>
-                    <div class="info">
+                    <div>
                         <h3>0</h3>
                         <p>Certificações</p>
                     </div>
@@ -97,13 +97,16 @@
                     <div class="icon">
                         <i class="fas fa-code-branch"></i>
                     </div>
-                    <div class="info">
+                    <div>
                         <h3 id="commit-count">Carregando...</h3>
                         <p>Total de Commits</p>
                     </div>
                 </div>
             </nav>    
-            </div>        
+            </div>
+            <div class="competencias">
+                <h2>teste</h2>
+            </div>
         </div>
     </section>    
 
